fixed whitespace near banner, horiz. scroll fixed

--- a/WelcomeStyles.css
+++ b/WelcomeStyles.css
@@ -5,6 +5,9 @@ body{
     text-align: center;
     font-size:14px;
     transition: background-color 0.5s, color 0.5s;
+    margin: 0; 
+    padding: 0;
+    box-sizing: border-box;
 }
 img{
     margin-top: 70px;
