--- a/aboutStyles.css
+++ b/aboutStyles.css
@@ -6,6 +6,9 @@
             font-family: "Helvetica", sans-serif;
             font-size:14px;
             transition: background-color 0.5s, color 0.5s;
+            margin: 0; 
+            padding: 0;
+            box-sizing: border-box;
         }
 
 
