--- a/accountSettings.css
+++ b/accountSettings.css
@@ -4,6 +4,9 @@ body {
     margin: 0;
     padding: 0;
     transition: background-color 0.5s, color 0.5s;
+    margin: 0; 
+    padding: 0;
+    box-sizing: border-box;
 }
 
 .center {
